--- a/ProjectX/app/build.gradle
+++ b/ProjectX/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.3'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
 }
