Continuato Detail Activity e "ultimato" DB e Provider

--- a/ProjectX/app/src/main/AndroidManifest.xml
+++ b/ProjectX/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
                     android:pathPattern="/app" />
             </intent-filter>
         </activity>
+        <provider
+            android:name=".Film.FilmContentProvider"
+            android:authorities="com.example.projectx.Film.FilmContentProvider" />
     </application>
-
 </manifest>
