Modificato layout, dati da API funzionanti

--- a/ProjectX/app/src/main/AndroidManifest.xml
+++ b/ProjectX/app/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.projectx">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -30,6 +31,7 @@
                     android:pathPattern="/app" />
             </intent-filter>
         </activity>
+
         <provider
             android:name=".Film.FilmContentProvider"
             android:authorities="com.example.projectx.Film.FilmContentProvider" />
