--- a/ProjectX/app/build.gradle
+++ b/ProjectX/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
