sistemato navigazione tra actitivity, quando si esce dal dettaglio la posizione della recycler non riparte dall'inizio

--- a/ProjectX/app/src/main/AndroidManifest.xml
+++ b/ProjectX/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.DetailActivity"></activity>
+
+        <activity
+            android:name=".activities.DetailActivity"
+            android:parentActivityName=".activities.MainActivity"></activity>
+
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,9 +30,9 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="http"
                     android:host="polatofioreseproject.com"
-                    android:pathPattern="/app" />
+                    android:pathPattern="/app"
+                    android:scheme="http" />
             </intent-filter>
         </activity>
 
